# gitig

./: Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: rust.yml
src/: lib.rs  main.rs  updater.rs
src/cli/: cli.rs  cmd.rs
src/core/: core.rs
src/util/: helper.rs
tools/: upload_assets.sh
