[package]
name = "gitig"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.4"
serde_json = "1.0.120"
serde = { version = "1.0", features = ["derive"] }
colored = "2.1.0"
self_update = { version = "0.42.0", features = [
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "compression-zip-bzip2",
] }

[build-dependencies]
serde_json = "1.0.120"
